vertical alignment fix for sign up view

--- a/src/styles/components/steps/step-7.styl
+++ b/src/styles/components/steps/step-7.styl
@@ -82,7 +82,7 @@
 @media all and (min-width 800px)
   #step-7
     .splash__component-container
-      transform translate(0, 20%)
+      transform translate(0, 10%)
 
     .splash__component-left
       width 55%
